--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -12,7 +12,6 @@
     <string name="detection_policy_manual">1</string>
     <string name="sample_identifier_index">0</string>
     <string name="sample_identifier_name">1</string>
-
     <string name="colon">:</string>
     
     <string name="button_prev">Previous</string>
@@ -21,12 +20,14 @@
     <string name="button_finish">Finish</string>
     <string name="button_cancel">Cancel</string>
     <string name="button_detect">Detect</string>
+    
     <string name="menu_about">About</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_new_template">New template</string>
     <string name="menu_mod_template">Edit template</string>
     <string name="menu_del_template">Delete template</string>
     <string name="menu_send_result">Send</string>
+    
     <string name="label_loading">Loading…</string>
     <string name="label_new_template">New template</string>
     <string name="label_new_template_detail">Create new template</string>
@@ -38,31 +39,27 @@
     <string name="label_sample_sum">Sum</string>
     <string name="label_sample_bv">Brightness</string>
     <string name="label_sample_cv">Concentration</string>
-
-    <string name="title_bluetooth_printer">Bluetooth printers</string>
+    
     <string name="title_choose_image">Choose image source</string>
-    <string name="title_choose_printer">Choose a printer</string>
     <string name="title_choose_product">Choose a product</string>
     <string name="title_detection_policy">Detection policy</string>
     <string name="title_detection_settings">Detection settings</string>
-    <string name="title_printer_settings">Printer settings</string>
+    <string name="title_launcher">Lincxmap</string>
     <string name="title_sample_identifier">Sample identifier</string>
     <string name="title_sample_settings">Sample settings</string>
     <string name="title_sample_selector_gap">Sample selector gap</string>
     <string name="title_sample_selector_size">Sample selector size</string>
-    <string name="title_scan_for_devices">Scan for devices</string>
     <string name="title_send_result">Send result</string>
-
+    
     <string name="summary_detection_policy">Choose a detection policy</string>
     <string name="summary_sample_identifier">Choose a sample identifier</string>
     <string name="summary_sample_selector_size">Set sample selector size</string>
     <string name="summary_sample_selector_gap">Set sample selector gap</string>
-    <string name="summary_scan_for_devices">Scan blutooth printers</string>
-
+    
     <string name="hint_template_name">Template Name</string>
     <string name="hint_template_rows">Template Rows</string>
     <string name="hint_template_cols">Template Columns</string>
-
+    
     <string name="image_source_capture">Capture</string>
     <string name="image_source_gallery">Gallery</string>
     
@@ -70,7 +67,8 @@
     <string name="msg_empty_template_name">Template name is not allowed to be empty</string>
     <string name="msg_detecting">Detecting&#8230;</string>
     <string name="msg_invalid_image">Invalid image</string>
-
+    
     <string name="about_version">LincXmap (Android) 1.0beta</string>
     <string name="about_copyright">Copyright &#169; 2009&#8211;2012 Shanghai Lincbio Co,Ltd. All rights Reserved.</string>
+
 </resources>
