--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -40,6 +40,12 @@
     <string name="label_sample_bv">Brightness</string>
     <string name="label_sample_cv">Concentration</string>
     
+    <string name="label_toolbar_new">New Template</string>
+    <string name="label_toolbar_query">Query</string>
+    <string name="label_toolbar_catalog">Catalog</string>
+    <string name="label_toolbar_settings">Settings</string>
+    <string name="label_toolbar_help">Help</string>
+    
     <string name="title_choose_image">Choose image source</string>
     <string name="title_choose_product">Choose a product</string>
     <string name="title_detection_policy">Detection policy</string>
