--- a/android/res/values-zh-rCN/strings.xml
+++ b/android/res/values-zh-rCN/strings.xml
@@ -39,7 +39,7 @@
     <string name="title_choose_product">选择产品</string>
     <string name="title_detection_policy">检测策略</string>
     <string name="title_detection_settings">检测设置</string>
-    <string name="title_launcher">LincXmap桌面</string>
+    <string name="title_launcher">LincXmap</string>
     <string name="title_sample_identifier">样本标识</string>
     <string name="title_sample_settings">样本设置</string>
     <string name="title_sample_selector_gap">样本选择器间隙</string>
