--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -21,7 +21,9 @@
     <string name="button_cancel">Cancel</string>
     <string name="button_detect">Detect</string>
     
+    <string name="menu_add">Add</string>
     <string name="menu_about">About</string>
+    <string name="menu_clear">Clear</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_new_template">New template</string>
     <string name="menu_mod_template">Edit template</string>
