--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <string name="app_name">LincXmap</string>
-    <string name="default_cols">4</string>
-    <string name="default_rows">4</string>
+    <string name="default_cols">2</string>
+    <string name="default_rows">2</string>
     <string name="default_selector_gap">20</string>
     <string name="default_selector_size">80</string>
     <string name="zero">0</string>
@@ -42,8 +42,8 @@
     <string name="label_sample_bv">Brightness</string>
     <string name="label_sample_cv">Concentration</string>
     
-    <string name="label_toolbar_new">New Template</string>
-    <string name="label_toolbar_query">Query</string>
+    <string name="label_toolbar_new">New</string>
+    <string name="label_toolbar_query">History</string>
     <string name="label_toolbar_catalog">Catalog</string>
     <string name="label_toolbar_settings">Settings</string>
     <string name="label_toolbar_help">Help</string>
@@ -75,6 +75,7 @@
     <string name="msg_empty_template_name">Template name is not allowed to be empty</string>
     <string name="msg_detecting">Detecting&#8230;</string>
     <string name="msg_invalid_image">Invalid image</string>
+    <string name="msg_confirm_clear">Are you sure clear all?</string>
     
     <string name="about_version">LincXmap (Android) 1.0beta</string>
     <string name="about_copyright">Copyright &#169; 2009&#8211;2012 Shanghai Lincbio Co,Ltd. All rights Reserved.</string>
