--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -42,14 +42,18 @@
     <string name="label_sample_sum">Sum</string>
     <string name="label_sample_bv">Brightness</string>
     <string name="label_sample_cv">Concentration</string>
+    <string name="label_profile_name">Name:</string>
+    <string name="label_profile_sn">SN:</string>
     
     <string name="label_toolbar_template">Template</string>
     <string name="label_toolbar_product">Product</string>
-    <string name="label_toolbar_query">History</string>
+    <string name="label_toolbar_query">Query</string>
     <string name="label_toolbar_profile">Profile</string>
     
+    <string name="title_add_profile">Add profile</string>
     <string name="title_choose_image">Choose image source</string>
     <string name="title_choose_product">Choose a product</string>
+    <string name="title_choose_profile">Choose a profile</string>
     <string name="title_detection_policy">Detection policy</string>
     <string name="title_detection_settings">Detection settings</string>
     <string name="title_launcher">Lincxmap</string>
@@ -77,6 +81,9 @@
     <string name="msg_detecting">Detecting&#8230;</string>
     <string name="msg_invalid_image">Invalid image</string>
     <string name="msg_confirm_clear">Are you sure clear all?</string>
+    <string name="msg_profile_name_required">Name is required</string>
+    <string name="msg_profile_sn_required">Serial number is required</string>
+    <string name="msg_add_profile_succeed">Add profile succeed</string>
     
     <string name="about_version">LincXmap (Android) 1.0beta</string>
     <string name="about_copyright">Copyright &#169; 2009&#8211;2012 Shanghai Lincbio Co,Ltd. All rights Reserved.</string>
