--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="positive">+</string>
     
     <string name="fmt_result_title">%1$s %2$9s %3$19s %4$s</string>
-    <string name="fmt_result_entry">%1$s %2$6.2f %3$6.2f-%4$6.2f %5$s</string>
+    <string name="fmt_result_entry">%1$s %2$6.2f %3$.2f-%4$.2f %5$s</string>
     
     <string name="button_prev">Previous</string>
     <string name="button_next">Next</string>
