--- a/android/res/values-zh-rCN/strings.xml
+++ b/android/res/values-zh-rCN/strings.xml
@@ -17,8 +17,8 @@
     <string name="menu_new_template">新建模板</string>
     <string name="menu_mod_template">编辑模板</string>
     <string name="menu_del_template">删除模板</string>
-    <string name="menu_send_result">发送</string>
-    <string name="menu_del_history">删除历史记录</string>
+    <string name="menu_send_result">发送结果</string>
+    <string name="menu_del_history">删除历史</string>
     <string name="menu_del_profile">删除档案</string>
     
     <string name="label_loading">正在加载中…</string>
