Add product management feature

--- a/android/res/values-zh-rCN/strings.xml
+++ b/android/res/values-zh-rCN/strings.xml
@@ -20,6 +20,9 @@
     <string name="menu_send_result">发送结果</string>
     <string name="menu_del_history">删除历史</string>
     <string name="menu_del_profile">删除档案</string>
+    <string name="menu_add_product">添加产品</string>
+    <string name="menu_del_catalog">删除目录</string>
+    <string name="menu_del_product">删除产品</string>
     
     <string name="label_loading">正在加载中…</string>
     <string name="label_new">新建</string>
@@ -37,12 +40,15 @@
     <string name="label_sample_remark">备注</string>
     <string name="label_profile_name">姓名：</string>
     <string name="label_profile_sn">编号：</string>
+    <string name="label_product_catalog">产品目录：</string>
+    <string name="label_product_name">产品名称：</string>
     
     <string name="label_toolbar_template">模板</string>
     <string name="label_toolbar_product">产品</string>
     <string name="label_toolbar_history">查询</string>
     <string name="label_toolbar_profile">档案</string>
 
+    <string name="title_add_product">添加产品</string>
     <string name="title_add_profile">添加档案</string>
     <string name="title_choose_image">选择图片来源</string>
     <string name="title_choose_product">选择产品</string>
@@ -71,13 +77,16 @@
     <string name="image_source_capture">拍照</string>
     <string name="image_source_gallery">相册</string>
 
-    <string name="msg_unsupported_value">不支持的值</string>
-    <string name="msg_empty_template_name">模板名称不能为空</string>
+    <string name="msg_add_product_succeed">添加产品成功</string>
+    <string name="msg_add_profile_succeed">添加档案成功</string>
+    <string name="msg_template_name_required">模板名称不能为空</string>
     <string name="msg_detecting">正在检测中&#8230;</string>
-    <string name="msg_invalid_image">无效的图像</string>
     <string name="msg_confirm_clear">确定全部清空吗？</string>
     <string name="msg_confirm_delete">确定删除吗？</string>
-    <string name="msg_profile_name_required">姓名不能为空</string>
-    <string name="msg_profile_sn_required">编号不能为空</string>
-    <string name="msg_add_profile_succeed">添加档案成功</string>
+    <string name="msg_profile_name_required">档案姓名不能为空</string>
+    <string name="msg_profile_sn_required">档案编号不能为空</string>
+    <string name="msg_product_catalog_required">产品目录不能为空</string>
+    <string name="msg_product_name_required">产品名称不能为空</string>
+    <string name="msg_invalid_image">无效的图像</string>
+    <string name="msg_unsupported_value">不支持的值</string>
 </resources>
