--- a/android/res/values-zh-rCN/strings.xml
+++ b/android/res/values-zh-rCN/strings.xml
@@ -43,26 +43,30 @@
     <string name="label_product_catalog">产品目录：</string>
     <string name="label_product_name">产品名称：</string>
     
-    <string name="label_toolbar_template">模板</string>
-    <string name="label_toolbar_product">产品</string>
-    <string name="label_toolbar_history">历史</string>
-    <string name="label_toolbar_profile">档案</string>
-
+    <string name="title_about">关于</string>
     <string name="title_add_product">添加产品</string>
     <string name="title_add_profile">添加档案</string>
     <string name="title_choose_image">选择图片来源</string>
     <string name="title_choose_product">选择产品</string>
     <string name="title_choose_profile">选择档案</string>
+    <string name="title_detection">检测</string>
     <string name="title_detection_policy">检测策略</string>
+    <string name="title_detection_result">检测结果</string>
     <string name="title_detection_settings">检测设置</string>
+    <string name="title_history_list">历史</string>
     <string name="title_launcher">LincXmap</string>
-    <string name="title_result_detail">检测结果</string>
+    <string name="title_product_list">产品</string>
+    <string name="title_profile_list">档案</string>
+    <string name="title_result_detail">检测结果详细</string>
+    <string name="title_sample_layout">样本布局</string>
     <string name="title_sample_identifier">样本标识</string>
     <string name="title_sample_settings">样本设置</string>
     <string name="title_sample_selector_gap">样本选择器间隙</string>
-    <string name="title_sample_selector_size">样本选择器尺寸</string>
+    <string name="title_sample_selector_size">样本选择器大小</string>
     <string name="title_send_result">发送结果</string>
     <string name="title_settings">首选项</string>
+    <string name="title_template_list">模板</string>
+    <string name="title_template_new">新建模板</string>
 
     <string name="summary_detection_policy">设置检测策略</string>
     <string name="summary_sample_identifier">设置样本标识</string>
