--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -60,26 +60,30 @@
     <string name="label_product_catalog">Catalog:</string>
     <string name="label_product_name">Name:</string>
     
-    <string name="label_toolbar_template">Template</string>
-    <string name="label_toolbar_product">Product</string>
-    <string name="label_toolbar_history">History</string>
-    <string name="label_toolbar_profile">Profile</string>
-    
+    <string name="title_about">About</string>
     <string name="title_add_product">Add product</string>
     <string name="title_add_profile">Add profile</string>
     <string name="title_choose_image">Choose image source</string>
     <string name="title_choose_product">Choose a product</string>
     <string name="title_choose_profile">Choose a profile</string>
+    <string name="title_detection">Detection</string>
     <string name="title_detection_policy">Detection policy</string>
+    <string name="title_detection_result">Detection result</string>
     <string name="title_detection_settings">Detection settings</string>
+    <string name="title_history_list">History</string>
     <string name="title_launcher">Lincxmap</string>
-    <string name="title_result_detail">Detection result</string>
+    <string name="title_product_list">Product</string>
+    <string name="title_profile_list">Profile</string>
+    <string name="title_result_detail">Detection result details</string>
+    <string name="title_sample_layout">Sample layout</string>
     <string name="title_sample_identifier">Sample identifier</string>
     <string name="title_sample_settings">Sample settings</string>
     <string name="title_sample_selector_gap">Sample selector gap</string>
     <string name="title_sample_selector_size">Sample selector size</string>
     <string name="title_send_result">Send result</string>
     <string name="title_settings">Settings</string>
+    <string name="title_template_list">Template</string>
+    <string name="title_template_new">New template</string>
     
     <string name="summary_detection_policy">Choose a detection policy</string>
     <string name="summary_sample_identifier">Choose a sample identifier</string>
