--- a/android/res/values-zh-rCN/strings.xml
+++ b/android/res/values-zh-rCN/strings.xml
@@ -22,6 +22,7 @@
     <string name="menu_del_profile">删除档案</string>
     <string name="menu_add_product">添加产品</string>
     <string name="menu_del_catalog">删除目录</string>
+    <string name="menu_mod_product">编辑产品</string>
     <string name="menu_del_product">删除产品</string>
     
     <string name="label_loading">正在加载中…</string>
@@ -42,9 +43,11 @@
     <string name="label_profile_sn">编号：</string>
     <string name="label_product_catalog">产品目录：</string>
     <string name="label_product_name">产品名称：</string>
+    <string name="label_product_model">检测模型：</string>
+    <string name="label_product_args">参数列表：</string>
     
     <string name="title_about">关于</string>
-    <string name="title_add_product">添加产品</string>
+    <string name="title_product">产品</string>
     <string name="title_add_profile">添加档案</string>
     <string name="title_choose_image">选择图片来源</string>
     <string name="title_choose_product">选择产品</string>
@@ -53,10 +56,10 @@
     <string name="title_detection_policy">检测策略</string>
     <string name="title_detection_result">检测结果</string>
     <string name="title_detection_settings">检测设置</string>
-    <string name="title_history_list">历史</string>
+    <string name="title_history_list">历史列表</string>
     <string name="title_launcher">LincXmap</string>
-    <string name="title_product_list">产品</string>
-    <string name="title_profile_list">档案</string>
+    <string name="title_product_list">产品列表</string>
+    <string name="title_profile_list">档案列表</string>
     <string name="title_result_detail">检测结果详细</string>
     <string name="title_sample_layout">样本布局</string>
     <string name="title_sample_identifier">样本标识</string>
@@ -65,7 +68,7 @@
     <string name="title_sample_selector_size">样本选择器大小</string>
     <string name="title_send_result">发送结果</string>
     <string name="title_settings">首选项</string>
-    <string name="title_template_list">模板</string>
+    <string name="title_template_list">模板列表</string>
     <string name="title_template_new">新建模板</string>
 
     <string name="summary_detection_policy">设置检测策略</string>
@@ -92,6 +95,7 @@
     <string name="msg_profile_sn_required">档案编号不能为空</string>
     <string name="msg_product_catalog_required">产品目录不能为空</string>
     <string name="msg_product_name_required">产品名称不能为空</string>
+    <string name="msg_product_arg_value_required">产品参数不能为空</string>
     <string name="msg_invalid_image">无效的图像</string>
     <string name="msg_unsupported_value">不支持的值</string>
 </resources>
