--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -4,8 +4,9 @@
     <string name="app_name">LincXmap</string>
     <string name="default_cols">2</string>
     <string name="default_rows">2</string>
-    <string name="default_selector_gap">20</string>
-    <string name="default_selector_size">80</string>
+    <string name="default_sample_selector_gap">20</string>
+    <string name="default_sample_selector_size">80</string>
+    <string name="default_sample_selector_type">0</string>
     <string name="zero">0</string>
     <string name="one">1</string>
     <string name="detection_policy_auto">0</string>
@@ -82,7 +83,9 @@
     <string name="title_sample_identifier">Sample identifier</string>
     <string name="title_sample_settings">Sample settings</string>
     <string name="title_sample_selector_gap">Sample selector gap</string>
+    <string name="title_sample_selector_settings">Sample selector settings</string>
     <string name="title_sample_selector_size">Sample selector size</string>
+    <string name="title_sample_selector_type">Sample selector size</string>
     <string name="title_send_result">Send result</string>
     <string name="title_settings">Settings</string>
     <string name="title_template_list">Template list</string>
@@ -92,6 +95,7 @@
     <string name="summary_sample_identifier">Choose a sample identifier</string>
     <string name="summary_sample_selector_size">Set sample selector size</string>
     <string name="summary_sample_selector_gap">Set sample selector gap</string>
+    <string name="summary_sample_selector_type">Set sample selector type</string>
     
     <string name="hint_template_name">Template Name</string>
     <string name="hint_template_rows">Template Rows</string>
